--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -26,8 +26,6 @@
 <li><a href="mitiv/linalg/ArrayOps.html" title="class in mitiv.linalg">ArrayOps</a></li>
 <li><a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array">ArrayUtils</a></li>
 <li><a href="mitiv/base/BaseUtils.html" title="class in mitiv.base">BaseUtils</a></li>
-<li><a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy">BiPhotonModel</a></li>
-<li><a href="mitiv/optim/BLMVM.html" title="class in mitiv.optim">BLMVM</a></li>
 <li><a href="mitiv/base/indexing/BoundaryConditions.html" title="enum in mitiv.base.indexing">BoundaryConditions</a></li>
 <li><a href="mitiv/optim/BoundProjector.html" title="class in mitiv.optim">BoundProjector</a></li>
 <li><a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io">BufferedImageUtils</a></li>
@@ -53,12 +51,9 @@
 <li><a href="mitiv/base/indexing/CompiledRange.html" title="class in mitiv.base.indexing">CompiledRange</a></li>
 <li><a href="mitiv/cost/CompositeDifferentiableCostFunction.html" title="class in mitiv.cost">CompositeDifferentiableCostFunction</a></li>
 <li><a href="mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim">ConvexSetProjector</a></li>
-<li><a href="mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></li>
-<li><a href="mitiv/deconv/impl/ConvolutionDouble.html" title="class in mitiv.deconv.impl">ConvolutionDouble</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl">ConvolutionDouble1D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble3D.html" title="class in mitiv.deconv.impl">ConvolutionDouble3D</a></li>
-<li><a href="mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl">ConvolutionFloat</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat1D.html" title="class in mitiv.deconv.impl">ConvolutionFloat1D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl">ConvolutionFloat2D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl">ConvolutionFloat3D</a></li>
@@ -160,7 +155,6 @@
 <li><a href="mitiv/linalg/shaped/FloatShapedVector.html" title="class in mitiv.linalg.shaped">FloatShapedVector</a></li>
 <li><a href="mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped">FloatShapedVectorSpace</a></li>
 <li><a href="mitiv/io/FormatOptions.html" title="class in mitiv.io">FormatOptions</a></li>
-<li><a href="mitiv/optim/GeneralBounds.html" title="class in mitiv.optim">GeneralBounds</a></li>
 <li><a href="mitiv/cost/GradientChecker.html" title="class in mitiv.cost">GradientChecker</a></li>
 <li><a href="mitiv/array/impl/Helper.html" title="class in mitiv.array.impl">Helper</a></li>
 <li><a href="mitiv/cost/HyperbolicTotalVariation.html" title="class in mitiv.cost">HyperbolicTotalVariation</a></li>
@@ -186,6 +180,7 @@
 <li><a href="mitiv/base/mapping/IntScanner.html" title="interface in mitiv.base.mapping"><i>IntScanner</i></a></li>
 <li><a href="mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim">InverseHessianApproximation</a></li>
 <li><a href="mitiv/optim/LBFGS.html" title="class in mitiv.optim">LBFGS</a></li>
+<li><a href="mitiv/optim/LBFGSB.html" title="class in mitiv.optim">LBFGSB</a></li>
 <li><a href="mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></li>
 <li><a href="mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb">LeftHandSideMatrix</a></li>
 <li><a href="mitiv/tests/LinearConjGradTest.html" title="class in mitiv.tests">LinearConjGradTest</a></li>
@@ -193,8 +188,6 @@
 <li><a href="mitiv/invpb/LinearDeconvolver.html" title="class in mitiv.invpb">LinearDeconvolver</a></li>
 <li><a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></li>
 <li><a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></li>
-<li><a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></li>
-<li><a href="mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a></li>
 <li><a href="mitiv/array/Long1D.html" title="class in mitiv.array">Long1D</a></li>
 <li><a href="mitiv/array/Long2D.html" title="class in mitiv.array">Long2D</a></li>
 <li><a href="mitiv/array/Long3D.html" title="class in mitiv.array">Long3D</a></li>
@@ -212,6 +205,7 @@
 <li><a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils">MathUtils</a></li>
 <li><a href="mitiv/io/MdaFormat.html" title="class in mitiv.io">MdaFormat</a></li>
 <li><a href="mitiv/random/MersenneTwisterGenerator.html" title="class in mitiv.random">MersenneTwisterGenerator</a></li>
+<li><a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></li>
 <li><a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests">MinPack1Tests</a></li>
 <li><a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils">mitivCLI</a></li>
 <li><a href="mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim">MoreThuenteLineSearch</a></li>
@@ -219,10 +213,8 @@
 <li><a href="mitiv/utils/NavigableImagePanel.ZoomDevice.html" title="class in mitiv.utils">NavigableImagePanel.ZoomDevice</a></li>
 <li><a href="mitiv/exception/NonConformableArrayException.html" title="class in mitiv.exception">NonConformableArrayException</a></li>
 <li><a href="mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim">NonLinearConjugateGradient</a></li>
-<li><a href="mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim">NonmonotoneLineSearch</a></li>
 <li><a href="mitiv/random/NormalDistribution.html" title="class in mitiv.random">NormalDistribution</a></li>
 <li><a href="mitiv/exception/NotImplementedException.html" title="class in mitiv.exception">NotImplementedException</a></li>
-<li><a href="mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></li>
 <li><a href="mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></li>
 <li><a href="mitiv/utils/Poly.html" title="class in mitiv.utils">Poly</a></li>
 <li><a href="mitiv/random/PressTeukolskyGenerator.html" title="class in mitiv.random">PressTeukolskyGenerator</a></li>
@@ -237,14 +229,10 @@
 <li><a href="mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg">RankOneOperator</a></li>
 <li><a href="mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></li>
 <li><a href="mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb"><i>ReconstructionJob</i></a></li>
-<li><a href="mitiv/utils/reconstruction/ReconstructionJob.html" title="class in mitiv.utils.reconstruction">ReconstructionJob</a></li>
 <li><a href="mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a></li>
-<li><a href="mitiv/utils/reconstruction/ReconstructionThread.html" title="class in mitiv.utils.reconstruction">ReconstructionThread</a></li>
-<li><a href="mitiv/utils/reconstruction/ReconstructionThreadToken.html" title="class in mitiv.utils.reconstruction">ReconstructionThreadToken</a></li>
 <li><a href="mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb"><i>ReconstructionViewer</i></a></li>
 <li><a href="mitiv/exception/RecoverableFormatException.html" title="class in mitiv.exception">RecoverableFormatException</a></li>
-<li><a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></li>
-<li><a href="mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim">ReverseCommunicationOptimizerWithLineSearch</a></li>
+<li><a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim"><i>ReverseCommunicationOptimizer</i></a></li>
 <li><a href="mitiv/array/Scalar.html" title="class in mitiv.array">Scalar</a></li>
 <li><a href="mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg">ScaleOperator</a></li>
 <li><a href="mitiv/array/impl/SelectedByte1D.html" title="class in mitiv.array.impl">SelectedByte1D</a></li>
@@ -388,20 +376,10 @@
 <li><a href="mitiv/random/UniformDistribution.html" title="class in mitiv.random">UniformDistribution</a></li>
 <li><a href="mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a></li>
 <li><a href="mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg">VectorSpace</a></li>
-<li><a href="mitiv/optim/VMLMB.html" title="class in mitiv.optim">VMLMB</a></li>
-<li><a href="mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv">WeightedConvolutionCost</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble1D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble1D</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble2D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble2D</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble3D</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat1D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat1D</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat2D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat2D</a></li>
-<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat3D</a></li>
+<li><a href="mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv">WeightedConvolutionOperator</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></li>
-<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></li>
+<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy">Zernike1D</a></li>
 </ul>
 </div>
 </body>
