--- a/mitiv/microscopy/package-frame.html
+++ b/mitiv/microscopy/package-frame.html
@@ -11,10 +11,9 @@
 <div class="indexContainer">
 <h2 title="Classes">Classes</h2>
 <ul title="Classes">
-<li><a href="BiPhotonModel.html" title="class in mitiv.microscopy" target="classFrame">BiPhotonModel</a></li>
+<li><a href="MicroscopyModelPSF1D.html" title="class in mitiv.microscopy" target="classFrame">MicroscopyModelPSF1D</a></li>
 <li><a href="PSF_Estimation.html" title="class in mitiv.microscopy" target="classFrame">PSF_Estimation</a></li>
-<li><a href="WideFieldModel.html" title="class in mitiv.microscopy" target="classFrame">WideFieldModel</a></li>
-<li><a href="Zernike.html" title="class in mitiv.microscopy" target="classFrame">Zernike</a></li>
+<li><a href="Zernike1D.html" title="class in mitiv.microscopy" target="classFrame">Zernike1D</a></li>
 </ul>
 </div>
 </body>
