--- a/mitiv/optim/package-tree.html
+++ b/mitiv/optim/package-tree.html
@@ -76,7 +76,6 @@
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/BoundProjector.html" title="class in mitiv.optim"><span class="strong">BoundProjector</span></a>
 <ul>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/GeneralBounds.html" title="class in mitiv.optim"><span class="strong">GeneralBounds</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/SimpleBounds.html" title="class in mitiv.optim"><span class="strong">SimpleBounds</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim"><span class="strong">SimpleLowerBound</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim"><span class="strong">SimpleUpperBound</span></a></li>
@@ -84,6 +83,8 @@
 </li>
 </ul>
 </li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LBFGS.html" title="class in mitiv.optim"><span class="strong">LBFGS</span></a> (implements mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim">ReverseCommunicationOptimizer</a>)</li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LBFGSB.html" title="class in mitiv.optim"><span class="strong">LBFGSB</span></a> (implements mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim">ReverseCommunicationOptimizer</a>)</li>
 <li type="circle">mitiv.linalg.<a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg"><span class="strong">LinearOperator</span></a>
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim"><span class="strong">LBFGSOperator</span></a></li>
@@ -93,23 +94,15 @@
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/ArmijoLineSearch.html" title="class in mitiv.optim"><span class="strong">ArmijoLineSearch</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim"><span class="strong">MoreThuenteLineSearch</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim"><span class="strong">NonmonotoneLineSearch</span></a></li>
 </ul>
 </li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim"><span class="strong">ReverseCommunicationOptimizer</span></a>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">NonLinearConjugateGradient</span></a> (implements mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim">ReverseCommunicationOptimizer</a>)</li>
+</ul>
+</li>
+</ul>
+<h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/BLMVM.html" title="class in mitiv.optim"><span class="strong">BLMVM</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim"><span class="strong">ReverseCommunicationOptimizerWithLineSearch</span></a>
-<ul>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LBFGS.html" title="class in mitiv.optim"><span class="strong">LBFGS</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">NonLinearConjugateGradient</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/VMLMB.html" title="class in mitiv.optim"><span class="strong">VMLMB</span></a></li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim"><span class="strong">ReverseCommunicationOptimizer</span></a></li>
 </ul>
 <h2 title="Enum Hierarchy">Enum Hierarchy</h2>
 <ul>
@@ -118,9 +111,6 @@
 <li type="circle">java.lang.Enum&lt;E&gt; (implements java.lang.Comparable&lt;T&gt;, java.io.Serializable)
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim"><span class="strong">OptimTask</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">OptimStatus</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">LineSearchTask</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">LineSearchStatus</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim"><span class="strong">InverseHessianApproximation</span></a></li>
 </ul>
 </li>
